--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "bugs": "https://github.com/hotepp/next-story/issues",
   "dependencies": {
     "bulma": "^0.9.3",
+    "clsx": "^1.1.1",
     "next": "12.1.5",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
